Fix: Module title spacing

--- a/assets/source/3.0/sass/main.scss
+++ b/assets/source/3.0/sass/main.scss
@@ -82,3 +82,12 @@
 main .c-sidebar .c-sidebar__subcontainer--top {
     padding: 0;
 }
+
+h4.module-title {
+    margin-bottom: $base * 3;
+    margin-top: $base * 3;
+}
+
+div:first-child > .module-title {
+    margin-top: 0;
+}
